--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ authors = ["Daniel da Silva <daniel@doetdingen.nl>"]
 license = "MIT"
 edition = "2024"
 
+[[bin]]
+name = "todo"
+path = "src/main.rs"
+
 [dependencies]
 color-eyre = "0.6.3"
 crossterm = "0.28.1"
